# PyNetworkFriction

./: .gitignore  .pdm-python  CHANGELOG.md  README.md  main.py  mkdocs.yml  mypy.ini  pyproject.toml
.github/workflows/: main.yml
docs/: areas_of_control.md  data_analysis.md  data_prep.md  helper_functions.md  index.md  requirements.txt  tutorial.md
net_friction/: areas_of_control_matrix.py  calculations.py  data_preparation.py  datatypes.py  table_production.py
notebook/: UKR_networks.gpkg  Untitled.ipynb  explore_data.ipynb  finding_closest_points.ipynb  network_analysis.ipynb  scratch.ipynb  snap_geoms.ipynb
notebook/.ipynb_checkpoints/: finding_closest_points-checkpoint.ipynb  network_analysis-checkpoint.ipynb  snap_geoms-checkpoint.ipynb
src/: distance_matrix.py  fix_topology.py
tests/: conftest.py  pytest.ini  test_actions.py  test_areas_of_control_matrix.py  test_calculations.py  test_data_preparation.py  test_integration.py
tests/test_data/: ACLED.csv  GEODATA.gpkg  ROADS_TEST.dbf  ROADS_TEST.shp  ROADS_TEST.shx  UKR_ROADS_TEST.shx  UKR_TEST_BOUNDARIES.gpkg  UKR_networks_fixed.gpkg  incidents_in_route.csv  ukr_ppp.tif  ukr_ppp.tif.aux.xml
tests/test_data/control/: occupied_2024-04-20.gpkg  occupied_2024-04-21.gpkg  occupied_2024-04-22.gpkg  occupied_2024-04-23.gpkg
tests/test_data/data_prep/: acled.csv  centroids.gpkg  edges.gpkg  incidents_raster.csv
tests/test_data/integration_test_output/: areas_of_control_matrix.csv  boundaries_2.gpkg  boundaries_3.gpkg  centroids_2.gpkg  centroids_3.gpkg  distance_matrix.csv  incidents_in_routes.csv
