[project]
name = "net_friction"
version = "0.1.0"
description = "Utilities to calculate travel distance matrices weighted by incidents"
authors = [
    {name = "GISRedeDev", email = "dm@gisrede.com"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.dev-dependencies]
pytest = "~=8.2.0"
black = "~=24.4.2"
flake8 = "~=7.0.0"
isort = "~=5.13.2"
mypy = "~=0.910.0"
sphinx = "~=7.3.7"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
test = "pytest tests"
